--- a/app/src/main/res/layout/fragment_challenge.xml
+++ b/app/src/main/res/layout/fragment_challenge.xml
@@ -16,18 +16,22 @@
     <LinearLayout
         android:orientation="vertical"
         android:gravity="center"
-        style="@style/ChallengeLayout">
+        style="@style/MatchHeight">
 
         <include
             android:id="@+id/challenge_card"
             android:layout_width="match_parent"
             android:layout_height="180dp"
+            android:layout_marginStart="30dp"
+            android:layout_marginEnd="30dp"
             layout="@layout/challenge_card"/>
 
         <include
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
+            android:layout_marginStart="30dp"
+            android:layout_marginEnd="30dp"
             layout="@layout/challenge_button_bar" />
 
     </LinearLayout>
