Fixed margin in challenge card

--- a/app/src/main/res/layout/challenge_card.xml
+++ b/app/src/main/res/layout/challenge_card.xml
@@ -7,6 +7,8 @@
 
     <RelativeLayout
         android:layout_gravity="center"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
         style="@style/MatchHeight">
 
         <TextView
