--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="lightGray">#F3F3F3</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="screenBackground">#50C864</color>
+    <color name="freeze_icon">#3CC0F2</color>
     <color name="button_color">#E6C53C</color>
     <color name="button_grad_end">#F7D651</color>
     <color name="actionBarPrimary">#00A86B</color>
