--- a/app/src/main/res/layout/challenge_card.xml
+++ b/app/src/main/res/layout/challenge_card.xml
@@ -28,6 +28,19 @@
             style="@style/BoldHeading" />
 
         <ImageView
+            android:id="@+id/streak_icon"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true"
+            android:contentDescription="@string/streak_icon_desc"
+            app:srcCompat="@drawable/streak_icon"
+            style="@style/StreakIcon" />
+
+        <TextView
+            android:id="@+id/streak_val"
+            android:layout_toEndOf="@id/streak_icon"
+            style="@style/StreakVal" />
+
+        <ImageView
             android:id="@+id/freeze_icon"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
