Changed names of references to logo

--- a/app/src/main/res/drawable/splash_background.xml
+++ b/app/src/main/res/drawable/splash_background.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:drawable="@color/screenBackground"/>
+        android:drawable="@color/screenBackground" />
+
     <item>
         <bitmap
             android:gravity="center"
-            android:width="20dp"
-            android:height="20dp"
-            android:src="@drawable/logo"/>
+            android:src="@mipmap/logo_icon" />
+
     </item>
 </layer-list>
