Tweaked layout styles for freeze and streak icons

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -70,18 +70,20 @@
 
     <!--  Style for streak icon on challenge card  -->
     <style name="StreakIcon">
-        <item name="android:layout_width">35dp</item>
-        <item name="android:layout_height">35dp</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
 
         <item name="android:paddingTop">8dp</item>
-        <item name="android:paddingStart">1dp</item>
+        <item name="android:paddingStart">8dp</item>
     </style>
 
     <!--  Style for streak number on challenge card  -->
     <style name="StreakVal">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
+
         <item name="android:paddingTop">13dp</item>
+        <item name="android:paddingStart">3dp</item>
 
         <item name="android:textStyle">bold</item>
         <item name="android:textSize">15sp</item>
@@ -89,8 +91,8 @@
 
     <!--  Style for freeze icon on challenge card  -->
     <style name="FreezeIcon">
-        <item name="android:layout_width">35dp</item>
-        <item name="android:layout_height">35dp</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
 
         <item name="android:paddingTop">8dp</item>
         <item name="android:paddingEnd">8dp</item>
