--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,14 +1,13 @@
 <resources>
     <!--  Base application theme  -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/actionBarPrimary</item>
         <item name="colorPrimaryDark">@color/actionBarSecondary</item>
-        <item name="titleTextColor">@android:color/white</item>
         <item name="android:windowBackground">@color/screenBackground</item>
     </style>
 
     <!--  Unused Theme for Read More page  -->
-    <style name="ReadMoreTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="ReadMoreTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@android:color/white</item>
         <item name="colorPrimaryDark">@color/actionBarSecondary</item>
         <item name="titleTextColor">@android:color/black</item>
