--- a/app/src/main/res/drawable/rounded_buttons.xml
+++ b/app/src/main/res/drawable/rounded_buttons.xml
@@ -3,7 +3,11 @@
     <item>
         <shape android:shape="rectangle">
             <corners android:radius="6dp" />
-            <gradient android:angle="90" android:startColor="@color/button_color" android:endColor="@color/button_grad_end"  />
+
+            <gradient
+                android:angle="90"
+                android:startColor="@color/button_color"
+                android:endColor="@color/button_grad_end"  />
         </shape>
     </item>
 </selector>
