Changed text color to white in welcome page

--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -13,7 +13,7 @@
         android:textAlignment="center"
         android:textSize="27sp"
         android:text="@string/welcome_message"
-        android:color="@android:color/white"
+        android:textColor="@android:color/white"
         android:textStyle="bold" />
 
 </LinearLayout>
