--- a/app/src/main/res/layout/challenge_button_bar.xml
+++ b/app/src/main/res/layout/challenge_button_bar.xml
@@ -6,7 +6,7 @@
     <Button
         android:id="@+id/skip_button"
         android:layout_alignParentStart="true"
-        android:background="@drawable/rounded_buttons"
+        android:background="@drawable/rounded_button"
         android:text="@string/skip_label"
         style="@style/WrapAll" />
 
@@ -15,7 +15,7 @@
         android:layout_alignParentEnd="true"
         android:layout_toEndOf="@+id/skip_button"
         android:layout_marginStart="25dp"
-        android:background="@drawable/rounded_buttons"
+        android:background="@drawable/rounded_button"
         android:text="@string/complete_label"
         style="@style/WrapAll" />
 
