--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -46,7 +46,15 @@
     <fragment
         android:id="@+id/help_fragment"
         android:name="com.okomilabs.dailychallenges.fragments.HelpFragment"
-        android:label="Help" />
+        android:label="Help">
+
+        <action
+            android:id="@+id/help_to_welcome"
+            app:destination="@id/welcome_fragment"
+            app:popUpTo="@id/help_fragment"
+            app:popUpToInclusive="true" />
+
+    </fragment>
 
     <fragment
         android:id="@+id/about_fragment"
