--- a/app/src/main/res/layout/challenge_button_bar.xml
+++ b/app/src/main/res/layout/challenge_button_bar.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/MatchHeight">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
     <Button
         android:id="@+id/skip_button"
