--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -7,6 +7,10 @@
             android:title="@string/home_label" />
 
         <item
+            android:id="@+id/challenge_list_fragment"
+            android:title="@string/list_label" />
+
+        <item
             android:id="@+id/help_fragment"
             android:title="@string/help_label" />
 
