--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -43,7 +43,7 @@
         <item name="android:layout_height">wrap_content</item>
 
         <item name="android:color">@android:color/black</item>
-        <item name="android:textStyle">bold</item>
+        <item name="android:fontFamily">@font/asap_bold</item>
     </style>
 
     <!--  Style for text views in the detail section of read more page  -->
@@ -55,7 +55,7 @@
         <item name="android:layout_marginBottom">10dp</item>
 
         <item name="android:color">@android:color/black</item>
-        <item name="android:textStyle">bold</item>
+        <item name="android:fontFamily">@font/asap_bold</item>
     </style>
 
     <!--  Style for any smaller text  -->
@@ -64,6 +64,7 @@
         <item name="android:layout_height">wrap_content</item>
 
         <item name="android:paddingBottom">2dp</item>
+        <item name="android:fontFamily">@font/timeless</item>
         <item name="android:textSize">15sp</item>
     </style>
 
@@ -81,10 +82,10 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
 
-        <item name="android:paddingTop">13dp</item>
+        <item name="android:paddingTop">14dp</item>
         <item name="android:paddingStart">3dp</item>
 
-        <item name="android:textStyle">bold</item>
+        <item name="android:fontFamily">@font/asap_bold</item>
         <item name="android:textSize">15sp</item>
     </style>
 
@@ -152,6 +153,19 @@
     <style name="WrapAll">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
+    </style>
+    
+    <style name="ToolbarTheme" parent="ThemeOverlay.AppCompat.Dark">
+        <item name="android:fontFamily">@font/asap_bold</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+
+    <style name="AsapTextAppearance">
+        <item name="android:fontFamily">@font/asap</item>
+    </style>
+
+    <style name="DialogTheme" parent="ThemeOverlay.AppCompat.Dialog.Alert">
+        <item name="android:textAppearance">@font/asap</item>
     </style>
 
 </resources>
