--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,8 +19,9 @@
             android:minHeight="?attr/actionBarSize"
             android:background="@color/actionBarPrimary"
             app:title="@string/app_name"
+            app:titleTextAppearance="@font/asap_bold"
             app:titleTextColor="@android:color/white"
-            app:theme="@style/ThemeOverlay.AppCompat.Dark" />
+            app:theme="@style/ToolbarTheme" />
 
         <fragment
             android:id="@+id/nav_host_fragment"
@@ -35,6 +36,7 @@
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/nav_view"
         android:fitsSystemWindows="true"
+        app:itemTextAppearance="@style/AsapTextAppearance"
         app:menu="@menu/drawer_menu"
         style="@style/DrawerTheme" />
 
