--- a/app/src/main/res/layout/app_bar.xml
+++ b/app/src/main/res/layout/app_bar.xml
@@ -20,7 +20,7 @@
             android:background="@color/actionBarPrimary"
             app:title="@string/app_name"
             app:titleTextColor="@android:color/white"
-            app:theme="@style/ThemeOverlay.AppCompat.Light" />
+            app:theme="@style/ToolbarTheme" />
 
     </com.google.android.material.appbar.CollapsingToolbarLayout>
 
