--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -10,6 +10,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/welcome_message"
         android:alpha="0"
+        android:fontFamily="@font/asap"
         android:textAlignment="center"
         android:textSize="27sp"
         android:text="@string/welcome_message"
