--- a/app/src/main/res/layout/challenge_list_item.xml
+++ b/app/src/main/res/layout/challenge_list_item.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/challenge_item"
     android:layout_width="match_parent"
     android:layout_height="130dp"
     android:layout_marginTop="10dp"
