--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -42,12 +42,23 @@
             android:id="@+id/challenge_to_read_more"
             app:destination="@id/challenge_fragment" />
 
+        <argument
+            android:name="challengeId"
+            app:argType="integer"
+            android:defaultValue="1" />
+
     </fragment>
 
     <fragment
         android:id="@+id/challenge_list_fragment"
         android:name="com.okomilabs.dailychallenges.fragments.ChallengeListFragment"
-        android:label="@string/app_name" />
+        android:label="@string/app_name">
+
+        <action
+            android:id="@+id/challenge_list_to_read_more"
+            app:destination="@id/read_more_fragment" />
+
+    </fragment>
 
     <fragment
         android:id="@+id/help_fragment"
