--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -55,6 +55,10 @@
         android:label="@string/app_name">
 
         <action
+            android:id="@+id/challenge_list_to_welcome"
+            app:destination="@id/welcome_fragment" />
+
+        <action
             android:id="@+id/challenge_list_to_read_more"
             app:destination="@id/read_more_fragment" />
 
