--- a/app/src/main/res/layout/fragment_challenge_list.xml
+++ b/app/src/main/res/layout/fragment_challenge_list.xml
@@ -2,22 +2,40 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/challenge_list"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="gone" />
+        android:layout_above="@id/reset_button">
 
-    <TextView
-        android:id="@+id/completed_list_message"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/challenge_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentTop="true"
+            android:visibility="gone" />
+
+        <TextView
+            android:id="@+id/completed_list_message"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_margin="16dp"
+            android:text="@string/completed_list_message"
+            android:textColor="@android:color/white"
+            android:textSize="16sp" />
+
+    </RelativeLayout>
+
+    <Button
+        android:id="@+id/reset_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:text="@string/completed_list_message"
-        android:textColor="@android:color/white"
-        android:textSize="22sp" />
-
+        android:layout_alignParentBottom="true"
+        android:background="@drawable/rounded_button"
+        android:fontFamily="@font/asap"
+        android:text="@string/reset_label"
+        android:textSize="18sp" />
 
 </RelativeLayout>
