--- a/app/src/main/res/layout/challenge_list_item.xml
+++ b/app/src/main/res/layout/challenge_list_item.xml
@@ -6,7 +6,7 @@
     android:id="@+id/challenge_item"
     android:layout_width="match_parent"
     android:layout_height="130dp"
-    android:layout_marginTop="10dp"
+    android:layout_marginBottom="10dp"
     android:layout_marginStart="10dp"
     android:layout_marginEnd="10dp"
     app:contentPadding="17dp"
