--- a/app/src/main/res/layout/read_more_pointer.xml
+++ b/app/src/main/res/layout/read_more_pointer.xml
@@ -1,22 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     style="@style/VerticalLayout">
 
     <TextView
+        android:id="@+id/read_more_toggle"
+        style="@style/BoldHeading"
+        android:padding="20dp"
+        android:paddingVertical="20dp"
+        android:paddingBottom="10dp"
         android:text="@string/read_more_label"
+        android:textColor="#384D9E"
         android:textAlignment="center"
-        android:textSize="12sp"
-        style="@style/BoldHeading" />
-
-    <ImageView
-        app:srcCompat="@android:drawable/arrow_down_float"
-        style="@style/ArrowIcon" />
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@drawable/green_gradient" />
+        android:textSize="18sp" />
 
 </LinearLayout>
