Added icons and logo to drawer

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,6 +38,7 @@
         android:fitsSystemWindows="true"
         app:itemTextAppearance="@style/AsapTextAppearance"
         app:menu="@menu/drawer_menu"
+        app:headerLayout="@layout/nav_header"
         style="@style/DrawerTheme" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
