--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -4,19 +4,23 @@
 
         <item
             android:id="@+id/challenge_fragment"
-            android:title="@string/home_label" />
+            android:title="@string/home_label"
+            android:icon="@mipmap/home_icon" />
 
         <item
             android:id="@+id/challenge_list_fragment"
-            android:title="@string/list_label" />
-
-        <item
-            android:id="@+id/help_fragment"
-            android:title="@string/help_label" />
+            android:title="@string/list_label"
+            android:icon="@mipmap/list_icon" />
 
         <item
             android:id="@+id/about_fragment"
-            android:title="@string/about_label" />
+            android:title="@string/about_label"
+            android:icon="@mipmap/info_icon" />
+
+        <item
+            android:id="@+id/help_fragment"
+            android:title="@string/help_label"
+            android:icon="@mipmap/help_icon" />
 
     </group>
 </menu>
