--- a/app/src/main/res/drawable/rm_gradient.xml
+++ b/app/src/main/res/drawable/rm_gradient.xml
@@ -2,10 +2,12 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
+
             <gradient
                 android:angle="-90"
-                android:startColor="#FBFBFB"
-                android:endColor="#FBFBF2"/>
+                android:startColor="@color/rm_summary_background"
+                android:endColor="@color/rm_detail_background"/>
+
         </shape>
     </item>
 </selector>
