--- a/app/src/main/res/layout/read_more_gradient.xml
+++ b/app/src/main/res/layout/read_more_gradient.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/VerticalLayout">
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <View
         android:id="@+id/yellow_gradient"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:background="@drawable/rm_gradient" />
+
 </LinearLayout>
