--- a/app/src/main/res/layout/read_more_pointer.xml
+++ b/app/src/main/res/layout/read_more_pointer.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    style="@style/VerticalLayout">
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    android:orientation="horizontal">
 
     <TextView
-        android:id="@+id/read_more_toggle"
-        style="@style/BoldHeading"
-        android:padding="20dp"
-        android:paddingVertical="20dp"
-        android:paddingBottom="10dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="10dp"
         android:text="@string/read_more_label"
         android:textColor="#384D9E"
         android:textAlignment="center"
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        style="@style/BoldHeading" />
 
 </LinearLayout>
