--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="summary_text_color">@android:color/primary_text_light</color>
     <color name="info_label_color">#303030</color>
     <color name="link_label_color">#606060</color>
+    <color name="pointer_color">#384D9E</color>
 
     <color name="actionBarPrimary">#00A86B</color>
     <color name="actionBarSecondary">@android:color/black</color>
