--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -124,4 +124,30 @@
         <item name="android:background">?android:attr/listDivider</item>
     </style>
 
+    <style name="first_launch_message_box">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+
+        <item name="android:layout_marginStart">20dp</item>
+        <item name="android:layout_marginEnd">20dp</item>
+        <item name="android:layout_marginBottom">25dp</item>
+
+        <item name="background">@color/lightGray</item>
+        <item name="contentPadding">20dp</item>
+        <item name="cardCornerRadius">8dp</item>
+        <item name="cardElevation">3dp</item>
+    </style>
+
+
+    <style name="first_launch_button">
+        <item name="android:layout_width">110dp</item>
+        <item name="android:layout_height">wrap_content</item>
+
+        <item name="android:layout_marginStart">45dp</item>
+        <item name="android:layout_marginEnd">45dp</item>
+
+        <item name="android:letterSpacing">0.01</item>
+        <item name="android:fontFamily">@font/asap</item>
+    </style>
+
 </resources>
