--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -19,6 +19,25 @@
     </fragment>
 
     <fragment
+        android:id="@+id/first_launch_fragment"
+        android:name="com.okomilabs.dailychallenges.fragments.FirstLaunchFragment"
+        android:label="@string/app_name">
+
+        <action
+            android:id="@+id/first_launch_to_help"
+            app:destination="@id/help_fragment"
+            app:popUpTo="@id/first_launch_fragment"
+            app:popUpToInclusive="true" />
+
+        <action
+            android:id="@+id/first_launch_to_welcome"
+            app:destination="@id/welcome_fragment"
+            app:popUpTo="@id/first_launch_fragment"
+            app:popUpToInclusive="true" />
+
+    </fragment>
+
+    <fragment
         android:id="@+id/challenge_fragment"
         android:name="com.okomilabs.dailychallenges.fragments.ChallengeFragment"
         android:label="@string/app_name">
