--- a/app/src/main/res/layout/fragment_challenge_list.xml
+++ b/app/src/main/res/layout/fragment_challenge_list.xml
@@ -20,11 +20,13 @@
             android:id="@+id/completed_list_message"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_margin="16dp"
+            android:layout_centerInParent="true"
+            android:layout_margin="40dp"
             android:text="@string/completed_list_message"
+            android:textAlignment="center"
+            android:textSize="35sp"
             android:textColor="@android:color/white"
-            android:textSize="16sp" />
+            style="@style/BodyText" />
 
     </RelativeLayout>
 
