--- a/app/src/main/res/layout/fragment_challenge_list.xml
+++ b/app/src/main/res/layout/fragment_challenge_list.xml
@@ -22,6 +22,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:layout_margin="25dp"
+            android:fontFamily="@font/asap"
             android:text="@string/completed_list_message"
             android:textAlignment="center"
             android:textSize="24sp"
