--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -14,7 +14,6 @@
         android:textAlignment="center"
         android:textSize="27sp"
         android:text="@string/welcome_message"
-        android:textColor="@android:color/white"
-        android:textStyle="bold" />
+        android:textColor="@android:color/white" />
 
 </LinearLayout>
