--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,10 +17,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:minHeight="?attr/actionBarSize"
-            android:background="@color/actionBarPrimary"
+            android:background="@color/action_bar_primary"
             app:title="@string/app_name"
             app:titleTextAppearance="@font/asap_bold"
-            app:titleTextColor="@android:color/white"
+            app:titleTextColor="@color/secondary_color"
             app:theme="@style/ToolbarTheme" />
 
         <fragment
