--- a/app/src/main/res/layout/app_bar.xml
+++ b/app/src/main/res/layout/app_bar.xml
@@ -17,11 +17,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:minHeight="?attr/actionBarSize"
-            android:background="@color/actionBarPrimary"
+            android:background="@color/action_bar_primary"
             app:title="@string/app_name"
             app:titleTextColor="@android:color/white"
             app:theme="@style/ToolbarTheme" />
 
     </com.google.android.material.appbar.CollapsingToolbarLayout>
-
 </com.google.android.material.appbar.AppBarLayout>
