--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,8 +1,8 @@
 <resources>
     <!--  Base application theme  -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="colorPrimary">@color/actionBarPrimary</item>
-        <item name="colorPrimaryDark">@color/actionBarSecondary</item>
+        <item name="colorPrimary">@color/action_bar_primary</item>
+        <item name="colorPrimaryDark">@color/action_bar_secondary</item>
         <item name="android:windowBackground">@color/screenBackground</item>
     </style>
 
